fixed nav menu spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ a {
 
 .App {
   text-align: center;
- 
+
   color: var(--white);
   height: 100vh;
   width: 100vw;
@@ -59,21 +59,17 @@ a {
 .nav {
   z-index: 200;
   padding: 0;
-  background: #00000000;
+  background: transparent;
 }
 
 .nav-menu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: var(--big-padding);
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
-  align-content: center;
   box-sizing: border-box;
   z-index: 10;
+  padding-right: var(--big-padding);
 }
 
 .nav-icon {
